force-app/main/default/objects/BLND_DFFF_Sample_Survey__c/fields/BLND_Comments__c.field-meta.xml
<CustomField>
    <fullName>BLND_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>