force-app/main/default/objects/BLND_DFFF_Sample_Survey__c/fields/BLND_Other_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>BLND_Other_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Contact Email</label>
    <type>Email</type>
</CustomField>