force-app/main/default/objects/BLND_DFFF_Sample_Survey__c/fields/BLND_Other_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>BLND_Other_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>