force-app/main/default/objects/BLND_DFFF_Sample_Survey__c/fields/BLND_Services_Description__c.field-meta.xml
<CustomField>
    <fullName>BLND_Services_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Services Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>